# child_happy_patter_release

./: .env.example
backend/: .env.example  CONFIGURATION.md  README.md  TODO.md  claude.md  interactive_system_test.py  lightweight_system_test.py  main.py  pyproject.toml  pytest.ini  realistic_test.py  requirements.txt  run_real_langgraph_tests.py  simple_test.py  test_api_simple.py  test_report_1760235326.json  test_report_1760235520.json  test_report_1760235655.json  test_system_workflow.py
backend/.claude/: settings.local.json
backend/agents/: chapter_manager.py  edu_agent.py  emotion_agent.py  intent_agent.py  langgraph_workflow.py  memory_agent.py  meta_agent.py  multi_agent.py  role_agent.py  role_factory.py  safety_agent.py  world_agent.py
backend/api/: langgraph_routes.py
backend/config/: settings.py  warnings_config.py
backend/core/: openai_client.py  verification.py
backend/core/memory/: mem0.py
backend/db/: init_db.py
backend/docs/: SUMMARY.md  backend_architecture.md  multi_agent_pylance_fix_summary.md
backend/memory/: mem0.py
backend/models/: user.py  voiceprint.py
backend/qdrant_db/: meta.json
backend/schemas/: auth.py  session.py
backend/services/: resource_monitor.py  stt_service_mock.py
backend/tests/: README_langgraph_tests.md  README_real_tests.md  conftest.py  test_api_routes.py  test_langgraph_routes.py  test_langgraph_routes_real.py  test_mem0_initialization.py  test_settings.py  test_simple_api.py
backend/utils/: ollama_client.py  openai_client.py
backend/utils/auth/: auth_utils.py
backend/utils/db/: database.py  (+1 more)
(+14 files in other folders)
